@@ -241,39 +241,6 @@ VectorH2<R>::operator/(const typename VectorH2<R>::FT& f) const
 { return VectorH2<R>( hx()*f.denominator(), hy()*f.denominator(),
 	              hw()*f.numerator() ); }
 
-template <class R>
-inline
-typename R::Point_2
-operator+(const Origin&, const VectorH2<R>& v)
-{ return typename R::Point_2(v.hx(), v.hy(), v.hw()); }
-
-template <class R>
-inline
-typename R::Point_2
-operator-(const Origin&, const VectorH2<R>& v)
-{ return typename R::Point_2(-v.hx(), -v.hy(), v.hw()); }
-
-template <class R>
-inline
-typename R::Vector_2
-operator-(const PointH2<R>& p, const Origin&)
-{ return typename R::Vector_2(p.hx(), p.hy(), p.hw()); }
-
-template <class R>
-inline
-typename R::Vector_2
-operator-(const Origin&, const PointH2<R>& p)
-{ return typename R::Vector_2(-p.hx(), -p.hy(), p.hw()); }
-
-template <class R>
-CGAL_KERNEL_INLINE
-typename R::Point_2
-operator-(const PointH2<R>& p, const VectorH2<R>& v)
-{
-  return typename R::Point_2(p.hx()*v.hw() - v.hx()*p.hw(),
-                             p.hy()*v.hw() - v.hy()*p.hw(),
-                             p.hw()*v.hw() );
-}
 
 template < class R >
 CGAL_KERNEL_INLINE
