@@ -1,3 +1,6 @@
+19 May 200 Andreas Fabri
+- The global_operators from VectorH2.h are turned into function objects
+
 19 May 2004 Sylvain Pion
 - Homogeneous_converter : add conversions for RT, FT, Bbox_2 and Bbox_3.
 
